// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oauth login form renders a login button link 1`] = `
<div
  className="login-wrapper"
>
  <form
    className="login clr-form"
    onSubmit={[Function]}
  >
    <section
      className="title"
    >
      <h3
        className="welcome"
      >
        Welcome to
      </h3>
      Kubeapps
      <h5
        className="hint"
      >
        Your cluster operator has enabled login via an authentication provider.
      </h5>
    </section>
    <div
      className="login-group"
    />
    <a
      className="login-oauth-button"
      href="/sign/in"
    >
      <ReactWrapperComponent
        status="primary"
      >
        Login via OIDC Provider
      </ReactWrapperComponent>
    </a>
    <div
      className="login-moreinfo"
    >
      <a
        href="https://github.com/kubeapps/kubeapps/blob/master/docs/user/access-control.md"
        rel="noopener noreferrer"
        target="_blank"
      >
        <ReactWrapperComponent
          shape="info-circle"
        />
        More Info
      </a>
    </div>
  </form>
</div>
`;

exports[`token login form displays an error if the authentication error is passed 1`] = `
<div
  className="login-wrapper"
>
  <form
    className="login clr-form"
    onSubmit={[Function]}
  >
    <section
      className="title"
    >
      <h3
        className="welcome"
      >
        Welcome to
      </h3>
      Kubeapps
      <h5
        className="hint"
      >
        Your cluster operator should provide you with a Kubernetes API token.
      </h5>
    </section>
    <div
      className="login-group"
    >
      <div
        className="clr-form-control"
      >
        <label
          className="clr-control-label"
          htmlFor="token"
        >
          Token
        </label>
        <div
          className="clr-control-container"
        >
          <div
            className="clr-input-wrapper"
          >
            <input
              className="clr-input"
              id="token"
              onChange={[Function]}
              placeholder="Paste token here"
              required={true}
              type="password"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="error active "
      >
        There was an error connecting to the Kubernetes API. Please check that your token is valid.
      </div>
    </div>
    <ReactWrapperComponent
      status="primary"
    >
      Submit
    </ReactWrapperComponent>
    <div
      className="login-moreinfo"
    >
      <a
        href="https://github.com/kubeapps/kubeapps/blob/master/docs/user/access-control.md"
        rel="noopener noreferrer"
        target="_blank"
      >
        <ReactWrapperComponent
          shape="info-circle"
        />
        More Info
      </a>
    </div>
  </form>
</div>
`;

exports[`token login form renders a token login form 1`] = `
<div
  className="login-wrapper"
>
  <form
    className="login clr-form"
    onSubmit={[Function]}
  >
    <section
      className="title"
    >
      <h3
        className="welcome"
      >
        Welcome to
      </h3>
      Kubeapps
      <h5
        className="hint"
      >
        Your cluster operator should provide you with a Kubernetes API token.
      </h5>
    </section>
    <div
      className="login-group"
    >
      <div
        className="clr-form-control"
      >
        <label
          className="clr-control-label"
          htmlFor="token"
        >
          Token
        </label>
        <div
          className="clr-control-container"
        >
          <div
            className="clr-input-wrapper"
          >
            <input
              className="clr-input"
              id="token"
              onChange={[Function]}
              placeholder="Paste token here"
              required={true}
              type="password"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <ReactWrapperComponent
      status="primary"
    >
      Submit
    </ReactWrapperComponent>
    <div
      className="login-moreinfo"
    >
      <a
        href="https://github.com/kubeapps/kubeapps/blob/master/docs/user/access-control.md"
        rel="noopener noreferrer"
        target="_blank"
      >
        <ReactWrapperComponent
          shape="info-circle"
        />
        More Info
      </a>
    </div>
  </form>
</div>
`;

exports[`while authenticating loading spinner matches the snapshot 1`] = `
<LoadingWrapper
  loaded={false}
  type={0}
/>
`;
